# tobas_f450_description

./: CMakeLists.txt  README.md  package.xml
meshes/: phantom3_0945_ccw.stl  phantom3_0945_cw.stl
urdf/: f450.uadf
